--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -53,6 +53,7 @@ pipeline {
         steps {
             withCredentials([string(credentialsId: 'github', variable: 'GITHUB_TOKEN')]) {
                 sh '''
+                    cd java-maven-sonar-argocd-helm-k8s/spring-boot-app-manifests
                     git config user.email "phemyolowo@gmail.com"
                     git config user.name "phemy0"
                     BUILD_NUMBER=${BUILD_NUMBER}
